--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
     <nav class="flex ml-[60px] mt-[25px]">
         <img src="/assets/icons/Logo (2).svg" alt="logo">
 
-        <div class="flex w-[1564px] h-[23px] flex gap-[55px] ml-[120px] text-[25px]" style="color: #274C5B;">
-            <p class="textsitem">Home</p>
-            <p class="textsitem">About</p>
-            <p class="textsitem">Pages</p>
-            <p class="textsitem">Shop</p>
-            <p class="textsitem">Projects</p>
-            <p class="textsitem">News</p>
+        <div class="flex w-[1564px] h-[23px] flex gap-[55px] ml-[120px] text-[25px] mt-[15px] font-bold">
+            <p class="textsitem"style="color: #274C5B;">Home</p>
+            <p class="textsitem"style="color: #274C5B;">About</p>
+            <p class="textsitem"style="color: #274C5B;">Pages</p>
+            <p class="textsitem"style="color: #274C5B;">Shop</p>
+            <p class="textsitem"style="color: #274C5B;">Projects</p>
+            <p class="textsitem"style="color: #274C5B;">News</p>
         </div>
 
-        <div class="flex gap-[55px] ml-[-550px] w-[376px] h-[66px] radius-[36px]">
+        <div class="flex gap-[40px] ml-[-550px] w-[376px] h-[66px] radius-[36px]">
             <img src="/assets/icons/Search Icon.svg" alt="search">
             <div class="flex gap-[55px]">
-                <img src="/assets/icons/Cart Icon.svg" alt="cart icon">
-                <p class="width-[159px] h-[66px] font-['Roboto'] font-normal left-[394px] text-[30px] mt-[10px] radius-[40px] border-[3px] rounded-xl" style="color: #274C5B;">Cart(0)</p>
+                <img src="/assets/icons/Cart Icon.svg" alt="">
             </div>
         </div>
     </nav>
@@ -38,6 +37,74 @@
     <div class="block">
         <img src="/assets/img/Banner.png" alt="Banner" class="mt-[50px]">
     </div>
+ </section>
+
+ <section id="keyingi">
+    <div class="flex mt-[180px]">
+        <img src="/assets/img/photo.png" alt="Image">
+    </div>
+
+    <div class="mt-[-730px] ml-[1000px]">
+        <img src="/assets/icons/About Us.svg" alt="About">
+    </div>
+
+    <div class="text">
+       <h1 class="ml-[1000px] text-[46px] mt-[10px] font-bold" style="color: #274C5B;">We do Creative<br> 
+        Things for Success</h1> 
+
+        <p class="ml-[1000px] mt-[10px]">Simply dummy text of the printing and typesetting industry. Lorem had ceased<br>to been the industry's standard dummy text ever since the 1500s, when an<br>unknown printer took a galley.<br>
+            <br>Simply dummy text of the printing and typesetting industry. Lorem had ceased<br>to been the industry's standard dummy text ever since the 1500s, when an<br>unknown printer took a galley.</p>
+    </div>
+
+    <div class="pastexis">
+        <img src="/assets/icons/Icon.svg" alt="tiraktir" class="ml-[1000px] mt-[25px]">
+
+        <h1 class="ml-[1070px] mt-[-50px] text-[20px]  font-bold" style="color: #274C5B;">Modern Agriculture<br>Equipment</h1>
+
+        <img src="/assets/icons/Chemical Plant.svg" alt="bino" class="ml-[1350px] mt-[-50px]">
+
+        <h2 class="ml-[1420px] mt-[-60px] text-[20px] font-bold" style="color: #274c5b;">No growth<br>hormones are used</h2>
+    </div>
+
+    <button class="w-[236px] h-[80px] radius-[16px] padding-28px 39px 29px 39px gap-[10px] rounded-r-lg text-[25px] ml-[950px] mt-[80px]" style="background-color: #274C5B; color: #FFFFFF;">Explore More</button>
+
+    <img src="/assets/icons/Vector (1).svg" alt="Aerrow" class="ml-[1150px] mt-[-45px]">
+ </section>
+
+ <section id="pasgisektion">
+    <div class="block">
+        <img src="/assets/icons/Why Choose us_.svg" alt="Choose" class="mt-[500px] ml-[200px]">
+
+        <h1 class="mt-[20px] width-[524px] h-[118px] font-['Roboto'] w-[800px] size-[50px] font-bold text-[45px] ml-[190px]" style="color: #274C5B;">We do not buy from the<br>open market & traders.</h1>
+
+        <h2 class="mt-[50px] ml-[190px] text-[20px]" style="color: #525C60;">Simply dummy text of the printing and typesetting industry. Lorem had ceased<br>to been the industry's standard  the 1500s, when an unknown</h2><h3 class="w-[339px] h-[81px] radius-[49px] top-[29px] right-[91px] bottom-[29px] left-[27] gap-[10px] mt-[50px] font-bold ml-[180px] rounded-full" style="color: #274C5B; background-color: #ECECEC;">100% Natural Product</h3>
+
+        <h4 class="mt-[30px] ml-[250px] w-[444px] h-[60px] text-[18px]" style="color: #525C60;">Simply dummy text of the printing and typesetting<br>industry Lorem Ipsum</h4>
+
+        <img src="/assets/icons/Icon (1).svg" alt="tumaloq" class="mt-[-140px] ml-[190px]">
+
+        <h5 class="w-[339px] h-[81px] radius-[49px] top-[29px] rgiht-[91px] bottom-[29px] left-[27px] gap-[10px] mt-[160px] font-bold ml-[180px] rounded-full" style="color: #274C5B; background-color: #ECECEC;"> Increases resistance</h5>
+
+        <img src="/assets/icons/Icon (2).svg" alt="tumaloq" class="mt-[-50px] ml-[190px]">
+
+        <h6 class="w-[444px] h-[60px] font-Open Sans weight-[400] size-[18px] mt-[50px] ml-[250px] text-[18px]" style="color: #525C60;">Filling, and temptingly healthy, our Biona Organic<br>Granola with Wild Berries is just the thing</h6>
+
+        <img src="/assets/img/Photo (1).png" alt="photo" class="ml-[980px] mt-[-650px]">
+    </div>
+
+    <div class="w-[310px] h-[355px] radius-[30px] font-bold rounded-lg mt-[200px] ml-[320px]" style="background-color:#f7f4f4;">
+    </div>
+    <img src="/assets/icons/Icon (3).svg" alt="karzinka" class="ml-[430px] mt-[-270px]">
+    <div class="w-[152px] h-[29px] top-[160px] left-[51px] font-['Eoboto'] weight-[800] size-[25px] font-bold text-[25px] ml-[400px] mt-[30px]" style="color: #274C5B;">Return Policy</div>
+
+    <p class="ml-[380px] w-[184px] h-[115px] top-[201px] left-[35px] font-Open Sans weight-[400] size-[18px] align-center text-[18px] mt-[10px]" style="color: #525C60;">Simply dummy text of<br>the printintypesetting <br>industry.</p>
+</div>
+<div class="w-[310px] h-[355px] radius-[30px] font-bold rounded-lg mt-[-360px] ml-[680px]" style="background-color:#f7f4f4;">
+</div>
+<img src="/assets/icons/Icon (4).svg" alt="bak" class="ml-[790px] mt-[-290px]">
+<div class="w-[131] h-[29px] top-[160px] left-[350px] Font-['Roboto'] weight-[800] size-[25px] ml-[830px] mt-[-90px] text-[25px] font-bold" style="color: #274C5B;">100% Fresh</div>
+
+<p class="ml-[680px] w-[184px] h-[115px] top-[201px] left-[35px] font-Open Sans weight-[400] size-[18px] align-center text-[18px] mt-[10px]" style="color: #525C60;">Simply dummy text of<br>the printintypesetting <br>industry.</p>
  </section>
 </body>
 </html>
